# genai-playground

./: .gitignore  pyproject.toml
azure-openai/: chat.ipynb
llama-parse/: parse_pptx.ipynb  tutorial.ipynb
text-to-sql/: basic-text-to-sql.ipynb
