[tool.poetry]
name = "genai-playground"
version = "0.0.0"
description = ""
authors = ["tanimon <8575113+tanimon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-experimental = "^0.0.59"
langchain-aws = "^0.1.6"
langchain-openai = "^0.1.7"
boto3 = "^1.34.113"
jawsume = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
